search functions added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <title>Search</title>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="#">Navigation</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Links</a></li>
+            </ul>
+        </nav>
+
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
