Added Feeling Lucky Button

--- a/googleSearch.html
+++ b/googleSearch.html
@@ -12,7 +12,9 @@
         </nav>
         <form action="https://google.com/search">
             <input type="text" name="q">
-            <input type="submit" name="Google Search">
+            <input type="submit" name="Google Search" value="Google Search">
+            <input type="submit" name="btnI" value = "I am Feeling Lucky">
         </form>
+
     </body>
 </html>
