--- a/googleImageSearch.html
+++ b/googleImageSearch.html
@@ -6,15 +6,19 @@
     </head>
     <body>
         <nav>
-            <div>
+            <div style="display:inline;">
                 <a href="googleSearch.html">Google Search</a>
             </div>
         </nav>
 
+        <div id="VOOGLE">
+            VOOGLE
+        </div>
+
         <div class="form"> 
             <form action="https://google.com/search">
-                <input type="text" name="q">
-                <div>
+                <input type="text" name="q" class="input_s">
+                <div style ="text-align: center">
                     <input type="hidden" name="tbm" value="isch">
                     <input type="submit" name="Google Image Search" value= "Google Image Search">
                 </div>
