--- a/googleSearch.html
+++ b/googleSearch.html
@@ -7,18 +7,22 @@
     <body>
 
         <nav>
-            <div>
+            <div style="display:inline; margin-right:20px;">
                 <a href="googleImageSearch.html">Google Image Search</a>
             </div>
-            <div>
+            <div style="display:inline;">
                 <a href="googleAdvancedSearch.html">Google Advanced Search</a>
             </div>
         </nav>
 
+        <div id="VOOGLE">
+            VOOGLE
+        </div>
+
         <div class="form">
             <form action="https://google.com/search">
-                <input type="text" name="q" id="searchBar">
-                <div>
+                <input type="text" name="q" id="searchBar" class="input_s">
+                <div style ="text-align: center">
                     <input type="submit" name="Google Search" value="Google Search">
                     <input type="submit" name="btnI" value = "I am Feeling Lucky">
                 </div>
